--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
